--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,29 @@
-/* You can add global styles to this file, and also import other style files */
+@import './_utils';
+*,
+*::after,
+*:before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 62.5%;
+    @include res(htab) {
+        font-size: 57.5%;
+    }
+
+    @include res(vtab) {
+        font-size: 52.5%;
+    }
+
+    @include res(mobile) {
+        font-size: 47.5%;
+    }
+
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    padding: 0 3rem;
+}
